# Bot_embassy

./: .env.example  .gitignore  Dockerfile  QUICKSTART.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: config.py  main_bot.py  main_worker.py
app/bot/: dispatcher.py  texts.py
app/bot/handlers/: monitor.py  otp.py  register.py  start.py
app/bot/keyboards/: common.py
app/bot/middlewares/: db.py
app/bot/states/: registration.py
app/core/: encryption.py  logger.py
app/db/: engine.py  models.py  repository.py
app/monitor/: otp_bridge.py  worker.py
app/prenotami/: client.py  exceptions.py  flows.py  selectors.py  stealth.py
migrations/: env.py
migrations/versions/: 0001_initial.py
tests/: conftest.py  test_encryption.py  test_otp_bridge.py
