[project]
name = "bot-embassy"
version = "0.1.0"
description = "Telegram bot for booking Schengen visa appointments at the Italian Embassy in Belgrade via Prenot@Mi"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.4",
    "playwright>=1.49",
    "playwright-stealth>=1.0.6",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "arq>=0.26",
    "redis>=5.0",
    "cryptography>=43.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "loguru>=0.7",
    "sentry-sdk>=2.0",
    "pytz>=2024.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.12",
    "ruff>=0.5",
    "mypy>=1.10",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "ASYNC"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
